--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -41,11 +41,46 @@
 	text-align: left;
 }
 
+.card-upload .card-body{
+	padding: 2%;
+}
+
+.card-upload .form-control{
+	width: 60%;
+	margin: 1% 20% 5% 20%;
+	text-align: center;
+}
+
+.card-upload .card-footer{
+	width: 60%;
+	margin: 1% 20% 5% 20%;
+	text-align: center;
+}
 
 .btn{
 	text-align: center;
 }
 
+.btn-glb{
+	background: -moz-linear-gradient(-45deg, #283c86 0%, #45a247 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, #283c86 0%,#45a247 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, #283c86 0%,#45a247 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#283c86', endColorstr='#45a247',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	border:0;
+	border: 1.5px solid #f0f0f0;
+	border-radius: 10px;
+	padding: 0.7rem;
+	width: 15%;
+	font-size: 1.3rem;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 200ms ease-in-out;
+}
+
+.btn-glb:hover{
+	border-color: #f0f0f0;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.30);
+	transition: all 200ms ease-in-out;
+}
 
 .main-nav{
 	border-bottom: 4px solid #283c86;
@@ -377,4 +412,14 @@
 	overflow-x: hidden;
 	width: 100%;
 	max-width: 100%;
+}
+
+
+.remodal{
+	padding: 4%;
+	border-radius: 2rem;
+}
+
+.remodal-wrapper{
+	margin: 1%;
 }
