--- a/globe/templates/feed.html
+++ b/globe/templates/feed.html
@@ -33,6 +33,7 @@
 
 				</div>
 			</div>
+			<!--
 			<div class="col-xs-12 col-sm-7 m-l-4">
 				<div class="card" id="feed-upload">
 					<div class="card-head">
@@ -47,17 +48,18 @@
 								<div class="inline">
 									<input class="form-control" name="country" placeholder="Cairo, Egpyt"
 									type="text">
-									<input type="file" name="image" class="btn btn-outline-primary">
-									<button type="submit" class="btn btn-primary">Upload</button>
+									<button type="submit" class="btn btn-primary">Share</button>
 								</div>
 							</div>
 						</form>
-					</div><!--/card-body-->
-				</div><!--/card-->
+					</div>
+				</div>
 				<div id="minimise-upload">
 
 				</div>
 			</div>
+		-->
+			tba ----------->
 		</div><!--/row-->
 	</div><!--/feed-main_controls-->
 </section>
@@ -113,20 +115,34 @@
 	</div>
 	<div class="remodal" data-remodal-id="modal">
 		<button class="remodal-close" data-remodal-action="close"></button>
-		<form class="no-style" id="form-main" method="post" action="">
+		<form class="no-style" id="form-main" method="post" action="/post/" enctype="multipart/form-data">
 			<div id="remodal-wrapper">
 				<div id="form-stage-1" class="form-visible">
 					<h3>New Post</h3>
 					<p>First things first. Is your image 3D or 2D?</p><br>
 					<img src="/static/img/3d-model.svg" />
+					<br />
 					<a href="#0" class="btn btn-outline-primary" onClick="chooseImageType('panorama')">3D</a>
-
+					<div id="select-pano" class="form-hidden">
+						<i class="fa fa-tick text-success"></i>
+						Selected
+					</div>
+					<br />
 					<img src="/static/img/2d-model.svg" />
-					<a href="#0" class="btn btn-outline-primary" onClick="chooseImageType('2d')">2D</a>
-					<a class="text-tiny text-center mb-2" href="#0">I'm not sure.</a><br>
+					<br />
+					<a href="#0" class="btn btn-outline-primary mb-2" onClick="chooseImageType('2d')">2D</a>
+
+					<div class="form-hidden" id="select-2d">
+						<i class="fa fa-tick text-success"></i>
+						Selected
+					</div>
+					<br />
+					<a class="text-tiny text-center m-t-2 mb-2" href="#0">I'm not sure.</a><br>
+					<input type="hidden" value="" name="image-type" id="image-type"></input>
 				</div>
 				<div id="form-stage-2" class="form-hidden">
 					<h3>Choose an image</h3>
+					<p>Upload an image and tell your audience what it's about.</p>
 					<div class="card-body text-center">
 						<div class="form-group">
 							<label for="image">Choose an image to upload</label>
@@ -134,8 +150,8 @@
 							<input type="file" required class="form-control text-center" name="image"/>
 						</div>
 						<div class="form-group">
-							<label for="description">Share your thoughts</label>
-							<textarea class="form-control text-left" name="description"></textarea>
+							<label for="desc">Share your thoughts</label>
+							<input type="text" class="form-control text-left" name="desc" />
 						</div>
 					</div>
 				</div><!--/stage-2-->
@@ -145,14 +161,16 @@
 						<div id="map" style="width: 100%; height: 40%; padding: 25%;"></div>
 					</div>
 					<div class="form-group">
-						<label for="location">Or, enter manually:</label>
-						<input type="text" name="location" required class="form-control" placeholder="1 Drury Lane, London"></textarea>
+						<label for="location-city">Check the city is correct:</label>
+						<input type="text" id="location-city" name="location-city" required class="form-control" placeholder="Aberdeen">
+
+						<input type="hidden" class="form-control" id="location-coords" name="location-coords"></input>
 					</div>
 				</div>
 
 				<a href="#0" class="btn btn-danger" id="btn-previous" data-prev-stage=0 onclick="triggerPrevStage();">Cancel</a>
 
-				<a href="#0" class="btn btn-primary" id="btn-next" data-next-stage=2 onclick="triggerNextStage();">Next ></a>
+				<a href="#0" class="btn btn-disabled" id="btn-next" data-next-stage=2 onclick="triggerNextStage();">Next</a>
 
 				<button class="btn btn-primary form-hidden" id="btn-submit"> Upload </button>
 			</div><!--/remodal-wrapper-->
@@ -160,4 +178,98 @@
 	</div>
 </section>
 
+
+<div id="choose-pin">
+    <a href="#0" onclick="choose();" class="btn btn-primary">Select</a>
+</div>
+
+<script>
+	var map;
+	var marker;
+	var infowindow;
+	var messagewindow;
+
+	function initMap() {
+		//console.log(geocoder);
+		var edinburgh = {
+			lat: 55.936894769039434,
+			lng: -3.1640625
+		};
+		map = new google.maps.Map(document.getElementById('map'), {
+			center: edinburgh,
+			zoom: 13
+		});
+
+		infowindow = new google.maps.InfoWindow({
+			content: document.getElementById('choose-pin')
+		});
+		messagewindow = new google.maps.InfoWindow({
+			content: document.getElementById('message')
+		});
+		google.maps.event.addListenerOnce(map, 'click', function(event) {
+			marker = new google.maps.Marker({
+			position: event.latLng,
+			map: map
+		});
+		google.maps.event.addListener(marker, 'click', function() {
+			infowindow.open(map, marker);
+			var latlng = marker.getPosition();
+		});
+	});
+};
+
+	function choose(geocoder){
+		var latlng = marker.getPosition();
+		var lattitude = latlng.lat();
+		var longitude = latlng.lng();
+		//console.log(lattitude, longitude);
+
+		var coords = lattitude + ", " + longitude;
+
+		//success msg
+		$('#choose-pin').html(
+			"<i class='fa fa-check text-success'></i>"
+		);
+
+		console.log("placing coords into input");
+		$('#location-coords').val(coords);
+
+		return geocodeLatLng();
+	}
+
+	function geocodeLatLng() {
+		var geocoder = new google.maps.Geocoder;
+
+		var input = $('#location-coords').val();
+		console.log("read from input: " + input);
+		var latlngStr = input.split(',', 2);
+
+        var latlng = {lat: parseFloat(latlngStr[0]), lng: parseFloat(latlngStr[1])};
+
+		console.log("reading from geocoder func: " + latlng.lat);
+
+		geocoder.geocode({'location': latlng}, function(results, status) {
+	    	if (status === 'OK') {
+	            if (results[0]) {
+				  //grab the city
+				  city = results[0].address_components[3].long_name;
+				  console.log(city);
+	              $('#location-city').val(city);
+	            }
+				else {
+	              window.alert('No results found');
+	            }
+	          }
+			  else {
+	            window.alert('Geocoder failed due to: ' + status);
+	          }
+	    });
+	 }
+
+
+</script>
+
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key={{key}}&callback=initMap">
+    </script>
 {% endblock %}
