--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -81,10 +81,10 @@ $greenSecondary:#77f4af;
 }
 
 .btn-glb{
-	background: -moz-linear-gradient(-45deg, #283c86 0%, #45a247 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(-45deg, #283c86 0%,#45a247 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(135deg, #283c86 0%,#45a247 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#283c86', endColorstr='#45a247',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	background: -moz-linear-gradient(-45deg, $bluePrimary 0%, $greenPrimary 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, $bluePrimary 0%,$greenPrimary 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, $bluePrimary 0%,$greenPrimary 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$bluePrimary, endColorstr=$greenPrimary,GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 	border:0;
 	border: 1.5px solid #f0f0f0;
 	border-radius: 10px;
@@ -102,7 +102,7 @@ $greenSecondary:#77f4af;
 }
 
 .main-nav{
-	border-bottom: 4px solid #283c86;
+	border-bottom: 4px solid $greenPrimary;
 	padding: 1%;
 }
 
@@ -130,12 +130,12 @@ $greenSecondary:#77f4af;
 }
 
 .profile-thumb{
-	border: 2px solid #283c86;
+	border: 2px solid $bluePrimary;
 	border-radius: 100%;
 }
 
 .feed-upload{
-	color: #283c86;
+	color: $bluePrimary;
 	background: #f0f0f0;
 	width: 100%;
 	border: 2px solid #ccc;
@@ -162,12 +162,6 @@ $greenSecondary:#77f4af;
 
 #upload_form_spacer{
 	width: 100%;
-}
-
-.img-upload-target{
-	padding: 3%;
-	color: #283c86;
-	border: 2px dotted #283c86;
 }
 
 .card-body .col{
@@ -298,7 +292,10 @@ $greenSecondary:#77f4af;
 	bottom: 5%;
 	right: 5%;
 	border: 2px solid #f0f0f0;
-	background: #283c86;
+	background: -moz-linear-gradient(-45deg, $bluePrimary 0%, $greenPrimary 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, $bluePrimary 0%,$greenPrimary 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, $bluePrimary 0%,$greenPrimary 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$bluePrimary, endColorstr=$greenPrimary,GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 	width: 4rem;
 	height: 4rem;
 	border-radius: 100%;
@@ -337,7 +334,7 @@ $greenSecondary:#77f4af;
 .hr{
 	padding: 1%;
 	width: 60%;
-	border-top: 2px dotted orange;
+	border-top: 2px dotted $greenSecondary;
 	margin:0;
 	margin-left: 20%;
 }
@@ -417,7 +414,7 @@ $greenSecondary:#77f4af;
 	bottom: 1px;
 	left: 0%;
 	margin: 1px 11%;
-	background: teal;
+	background: $bluePrimary;
 }
 .map-filter form{
 	width: 100%;
@@ -440,7 +437,7 @@ $greenSecondary:#77f4af;
 .filter-results{
 	box-shadow: $box-shadow;
 	position: absolute;
-	bottom: 5.3rem;
+	bottom: 3.5rem;
 	left: 0;
 	padding: 10px;
 	background: #f1f1f1;
@@ -476,4 +473,103 @@ $greenSecondary:#77f4af;
 	min-height: 95%;
 	max-height: 95%;
 	overflow-y: scroll;
+}
+
+
+#site-wrapper {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	//height: 5000px; /* Temp: Simulates a tall page. */
+}
+
+#site-canvas {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+	-webkit-transition: .3s ease all;
+	transition: .3s ease all;
+	padding: .5% 0; /* Temp: Just spacing. */
+}
+
+#site-menu{
+	#rocket{
+		position: absolute;
+		bottom: 5px;
+		display: block;
+		margin: 0 auto;
+		text-align: center;
+	}
+	width: 300px;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	right: -300px;
+	padding: 1px;
+	background: #ecf0f1;
+	box-shadow: $box-shadow;
+	color: #ecf0f1 !important;
+
+	.nav-user .profile-thumb{
+		display: block;
+		margin: 1em auto;
+	}
+
+
+	.nav-user a{
+		display: block;
+		text-align: center;
+	}
+
+	.nav-user .name{
+		margin-bottom: .5em;
+		font-size: 1.75em;
+	}
+	ul{
+		padding: 0;
+	}
+	li{
+		padding: .5em;
+		text-align: center;
+		font-size: 1.2em;
+		list-style-type: none;
+	}
+	h2{
+		color: #34495e;
+		text-align: center;
+		margin: 2% 0 5% 0;
+	}
+
+	img{
+		display: block;
+		margin: 3em auto;
+	}
+
+
+
+}
+
+.site-menu_profile, .site-menu_main{
+	padding: 1em;
+}
+
+.site-menu_profile{
+	color: #ecf0f1;
+	background: -moz-linear-gradient(-45deg, $bluePrimary 0%, $greenPrimary 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, $bluePrimary 0%,$greenPrimary 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, $bluePrimary 0%,$greenPrimary 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$bluePrimary, endColorstr=$greenPrimary,GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.site-menu_main{
+	color: #34495e;
+	background:  #ecf0f1;
+}
+.site-menu_profile a{
+	color: #f0f0f0;
+}
+#site-wrapper.show-nav #site-canvas {
+  -webkit-transform: translateX(-300px);
+  transform: translateX(-300px);
 }
