--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -108,17 +108,17 @@ $greenSecondary:#77f4af;
 
 
 .filter{
-	text-align: left;
+	text-align: center;
 	padding: 5%;
 	margin: 3% 0;
-	height: 15rem;
+	height: 17rem;
 	width: 13rem;
+
+	h3{
+		margin-top: 10%;
+	}
 }
 
-
-.feed-filter h3{
-	text-align: center;
-}
 
 #feed-upload{
 	padding: 2.5% 1.5% .5% .5%;
@@ -237,6 +237,7 @@ $greenSecondary:#77f4af;
 
 .form-check-wrapper{
 	margin: 10%;
+	text-align: left;
 }
 
 
@@ -287,7 +288,7 @@ $greenSecondary:#77f4af;
 }
 
 
-.fab{
+.fab_{
 	position: fixed;
 	bottom: 5%;
 	right: 5%;
@@ -459,6 +460,48 @@ $greenSecondary:#77f4af;
 	overflow-x: hidden;
 	width: 100%;
 	max-width: 100%;
+}
+
+#upload-main{
+	transition: all 300ms ease-in-out;
+}
+.trigger{
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: .7em;
+}
+.maximised-u{
+	.tiny-form{
+		display: block;
+	}
+}
+
+.minimised-u{
+	.tiny-form{
+		display: none;
+	}
+}
+
+
+.gm-style .gm-style-iw{
+	font-weight: auto;
+	font-size: auto;
+}
+
+.maximised-f{
+	#feed-filter{
+		display: block;
+	}
+
+}
+.minimised-f{
+	#feed-filter{
+		display: none;
+	}
+	#filter-main{
+		height: 7em;
+	}
 }
 
 
