--- a/globe/templates/feed.html
+++ b/globe/templates/feed.html
@@ -7,9 +7,11 @@
 	<div class="container no-padding" id="feed-main_controls">
 		<div class="row no-gutters" style="width:100%;">
 			<div class="col-xs-12 col-sm-3">
-				<div class="card filter">
+			  <div class="maximised-f" id="filter-parent">
+				<div class="card filter" id="filter-main">
 					<h3>Filter Posts</h3>
-					<form action="/feed/filter/" method="post">
+					<a href="#0" id="toggleFilter">Toggle View</a>
+					<form action="/feed/filter/" metfilter-parenthod="post" id="feed-filter">
 						<div class="form-check-wrapper">
 							<div class="form-check">
 								<input checked class="form-check-input" id="exampleRadios1" name=
@@ -30,9 +32,7 @@
 						<button class="btn btn-outline-secondary text-center">Apply</button>
 					</form>
 				</div><!--/filter-->
-				<div id="minimise-filter">
-
-				</div>
+			  </div>
 			</div>
 			<div class="col-xs-12 col-sm-7 m-l-4">
 				<div class="card" id="feed-upload">
@@ -40,8 +40,9 @@
 						<img class="profile-thumb" height="40px" src=
 						"/static/img/default_profile.jpg" width="40px">
 						<a href="/user/1">Josh</a>
+						<a href="#0" class="trigger">Toggle View</a>
 					</div>
-					<div class="card-body">
+					<div class="card-body maximised-u" id="upload-main">
 						<form action="/post/" class="tiny-form" method="post" enctype="multipart/form-data">
 							<div class="col">
 								<label for="country">Where have you been recently?</label>
@@ -55,22 +56,10 @@
 						</form>
 					</div>
 				</div>
-				<div id="minimise-upload">
-
-				</div>
 			</div>
 		</div><!--/row-->
 	</div><!--/feed-main_controls-->
 </section>
-
-<a href="#modal">
-	<div class="fab">
-		+
-	</div>
-</a>
-<div class="fab-mini">
-	-
-</div>
 
 <section class="remodal-bg" id="feed-main_posts">
 	<div class="container">
@@ -265,6 +254,32 @@
 	    });
 	 }
 
+$(function() {
+	$('.trigger').click(function() {
+		if ($('#upload-main').hasClass("maximised-u")){
+			console.log("minimising...");
+			$('#upload-main').removeClass("maximised-u");
+			$('#upload-main').addClass("minimised-u");
+		}
+		else{
+			console.log("doing the opposite...");
+			$('#upload-main').removeClass("minimised-u");
+			$('#upload-main').addClass("maximised-u");
+		}
+	})
+	$('#toggleFilter').click(function() {
+		if ($('#filter-parent').hasClass("maximised-f")){
+			console.log("minimising...");
+			$('#filter-parent').removeClass("maximised-f");
+			$('#filter-parent').addClass("minimised-f");
+		}
+		else{
+			console.log("doing the opposite...");
+			$('#filter-parent').removeClass("minimised-f");
+			$('#filter-parent').addClass("maximised-f");
+		}
+	})
+});
 
 </script>
 
